# cdk_pywrapper

./: README.md  cdk_pywrapper.py  cdk_pywrapper_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
cdk_pywrapper/: __init__.py  cdk_pywrapper.py  cdk_pywrapper_mcp_server.py  cdk_pywrapper_test.py  chemlib.py  config.py
cdk_pywrapper/cdk/: cdk_bridge.java
cdk_pywrapper/tests/: cdk_pywrapper_test.py
